--- a/dashboardadmin/css/index.css
+++ b/dashboardadmin/css/index.css
@@ -327,8 +327,8 @@ img.logo {
     color: white !important;
 }
 
-.pagination-link.is-current {
-    background-color: #3273dc;
+a .pagination-link.is-current {
+    background-color: #3273dc !important;
     border-color: #3273dc;
     color: #fff;
 }
@@ -362,4 +362,16 @@ img.logo {
 
 .modal.modal-active .modal-background {
     opacity: 1;
+}
+
+.content li + li {
+    margin-top: 0em;
+}
+
+.menu-label {
+    color: #7a7a7a;
+    font-size: 1.2em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    font-weight: bold;
 }
