WS getProducts and get image in nodejs

--- a/dashboardadmin/css/index.css
+++ b/dashboardadmin/css/index.css
@@ -375,3 +375,7 @@ a .pagination-link.is-current {
     text-transform: uppercase;
     font-weight: bold;
 }
+
+ul.pagination-list li {
+    list-style: none;
+}
