--- a/dashboardadmin/css/productos.css
+++ b/dashboardadmin/css/productos.css
@@ -9,7 +9,7 @@
 
 /*@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');*/
 #team {
-    background: #eee !important;
+    background: #fafafa !important;
     width: 100%;
 }
 
