--- a/ecommerce/css/home.css
+++ b/ecommerce/css/home.css
@@ -2,6 +2,10 @@
     padding: 0.2% 4%;
 }
 
+#mainNav {
+  padding: 0% 3%;
+}
+
 .ml-auto .dropdown-menu {
     left: auto !important;
     right: 0px;
