--- a/ecommerce/css/home.css
+++ b/ecommerce/css/home.css
@@ -171,9 +171,7 @@ a strong {
  font-family: 'Amatic SC', cursive;
 }
 
-#Content {
-  height: 100vh;
-}
+
 
 #firstPartPromotion {
   padding: 10% 15% 10% 15%;
@@ -197,6 +195,7 @@ a strong {
 
 #secondPartPromotion {
   padding: 0% 11%;
+  height: 100vh;
 }
 #secondPartPromotion h2 {
   font-size: 25px;
@@ -220,14 +219,14 @@ a strong {
 .firstFooter h6{
   color: #1CD5EA;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 17px;
 }
 .firstFooter .line {
   padding: 0.5% 5%;
 }
 .firstFooter .pBody {
-  padding: 0.5% 10%;
-  font-size: 10px;
+  padding: 0.5% 7%;
+  font-size: 14px;
 }
 
 .firstFooter .pBody .button {
@@ -239,10 +238,18 @@ a strong {
   justify-content: center;
   align-items: center;
 
-  color: white;
   background-color: #9696D4;
-  font-size: 13px;
-  height: 40px;
+  font-size: 14px;
+  height: 50px;
+}
+.secondFooter a {
+  font-weight: lighter;
+  font-style: italic;
+  color: white;
+}
+.secondFooter a:hover { 
+  font-weight: bold;
+  font-style: italic;
 }
 
 
@@ -256,4 +263,13 @@ a strong {
   font-weight: bold;
   font-style: italic;
 }
+.productosFoot a {
+  font-size: 12px;
+  padding: 1px 3px;
+}
 /*--------------------------------------------------------------------*/
+.is-horizontal-center {
+  justify-content: center;
+  justify-items: center;
+  text-justify: center;
+}
