--- a/ecommerce/css/home.css
+++ b/ecommerce/css/home.css
@@ -220,6 +220,7 @@ a strong {
   color: #1CD5EA;
   font-weight: bold;
   font-size: 17px;
+  padding-bottom: 5px;
 }
 .firstFooter .line {
   padding: 0.5% 5%;
