--- a/ecommerce/css/custom.css
+++ b/ecommerce/css/custom.css
@@ -376,6 +376,7 @@
 
 #vista-previa{
   padding: 15px;
+  max-width: 350px;
 }
 .contenedor{
   padding: 5px 20px;
@@ -415,3 +416,16 @@
 
 }
 
+
+html{ height:100%; }
+body{ min-height:100%; padding:0; margin:0; position:relative; }
+
+body::after{ content:''; display:block; height:100px; }
+
+.footerEcommerce{
+  position:relative; 
+  bottom:0; 
+  width:100%; 
+  height:0px; 
+  margin-top:200px;
+}
