--- a/ecommerce/css/custom.css
+++ b/ecommerce/css/custom.css
@@ -429,3 +429,71 @@ body::after{ content:''; display:block; height:100px; }
   height:0px; 
   margin-top:200px;
 }
+/*home*/
+@media (max-width: 768px) {
+  #menuProductos {
+    margin-top: 215px;
+    position: fixed;
+    width: 100%;
+  }
+}
+@media (min-width:769px){
+  #menuProductos {
+    margin-top: 69px;
+    position: fixed;
+    background-color: #9696D4;
+    color: white;
+    
+    width: 100%;
+  }
+}
+.navbar-start{
+  margin-left: 100px;
+}
+.navbar-link{
+  background-color: transparent;
+  color: white;
+}
+.navbar-link:focus{
+  background-color: transparent;
+  color: white;
+}
+.navbar-link:hover{
+  background-color: #4AE0B8;
+  color:white;
+}
+@media screen and (min-width: 1088px){
+    .navbar-link.is-active, a.navbar-item.is-active {
+      color: #FFFFFF;
+  }
+
+  .navbar-link.is-active, a.navbar-item.is-active {
+    background-color: #4AE0B8;
+      color: #FFFFFF;
+  }
+  .navbar-item.Subcategory{
+    color: white;
+  }
+}
+.navbar-link:not(.is-arrowless)::after {
+  border-color: #ffffff;
+  margin-top: -0.375em;
+  right: 1.125em;
+}
+
+#secondNav a {
+  text-decoration: none;
+  background-image: linear-gradient(#4AE0B8, #4AE0B8);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size .3s;
+}
+
+.navbar-item:hover{
+  background-color: #4AE0B8 ;
+}
+a.navbar-item:hover{
+  background-color: #4AE0B8 ;
+  color: white;
+}
