--- a/ecommerce/css/custom.css
+++ b/ecommerce/css/custom.css
@@ -471,9 +471,10 @@ body::after{ content:''; display:block; height:100px; }
     background-color: #4AE0B8;
       color: #FFFFFF;
   }
-  .navbar-item.Subcategory{
+  #home a{
     color: white;
   }
+  
 }
 .navbar-link:not(.is-arrowless)::after {
   border-color: #ffffff;
@@ -496,4 +497,16 @@ body::after{ content:''; display:block; height:100px; }
 a.navbar-item:hover{
   background-color: #4AE0B8 ;
   color: white;
+}
+
+#menuProductos .column img {
+  padding-left: 15px;
+  max-height: 8rem !important;
+}
+
+#titMenu:hover{
+  background-color: transparent;
+}
+.rightSide img{
+  padding-right: 15px;
 }
