--- a/ecommerce/css/custom.css
+++ b/ecommerce/css/custom.css
@@ -434,9 +434,26 @@ body::after{ content:''; display:block; height:100px; }
   #menuProductos {
     margin-top: 215px;
     position: fixed;
+    background-color: #9696D4;
     width: 100%;
   }
+  #menuProductos .none-display{
+    display: none;
+  }
+  #menuProductos .column img {
+    display: none;
+  }
+
+  .icon-social-media{
+    color: white;
+    font-size: 1.5em;
+  }
+  .navbar-link{
+    color: #4a4a4a;
+  }
+  
 }
+
 @media (min-width:769px){
   #menuProductos {
     margin-top: 69px;
@@ -446,14 +463,16 @@ body::after{ content:''; display:block; height:100px; }
     
     width: 100%;
   }
+  .icon-social-media{
+    color: white;
+    font-size: 1.5em;
+  }
+  
 }
 .navbar-start{
   margin-left: 100px;
 }
-.navbar-link{
-  background-color: transparent;
-  color: white;
-}
+
 .navbar-link:focus{
   background-color: transparent;
   color: white;
@@ -474,7 +493,22 @@ body::after{ content:''; display:block; height:100px; }
   #home a{
     color: white;
   }
-  
+  #home a:focus{
+    background-color: transparent;
+  }
+  /*estilos de tamaño pantalla completa*/
+  /*.navbar-item.is-mega {
+    position: static;
+  }
+  .is-mega-menu-title {
+    margin-bottom: 0;
+    padding: .375rem 1rem;
+  }*/
+  .navbar-link{
+    background-color: transparent;
+    color: white;
+  }
+
 }
 .navbar-link:not(.is-arrowless)::after {
   border-color: #ffffff;
@@ -509,4 +543,9 @@ a.navbar-item:hover{
 }
 .rightSide img{
   padding-right: 15px;
+}
+
+
+.navbar-burger{
+  color: #FFFFFF;
 }
