Responsive-height and width

--- a/ecommerce/css/home.css
+++ b/ecommerce/css/home.css
@@ -291,8 +291,7 @@ a strong {
 
 .item-11 a{
   position: absolute;
-  /*bottom:40%;*/
-  bottom:370px;
+  bottom:40%;
   right:39%;
   background-color:#FFC2E8;
   border-radius:1.2em;
@@ -340,119 +339,323 @@ a strong {
   background-color:#1CD5EA;
   color: white;
 }
-
-
-/*PRUEBAS-----------------------------------------------------------------------------*/
-@media screen and (max-width: 1128px) and (max-height: 662px) {
-  
-.item-11 a{
-  position: absolute;
-  /*bottom:40%;*/
-  bottom:330px;
-  right:35%;
-  background-color:#FFC2E8;
-  border-radius:1.2em;
-  color: #F74784;
-  text-transform:uppercase;
-  padding:1em 1.5em;
-  font-size: 160%;
-  font-family: 'Lato', sans-serif;
-}
-.item-11 a:hover{
-  background-color:#1CD5EA;
-  color: white;
-}
-
-.item-22 a{
-  position: absolute;
-  bottom:60%;
-  right:74%;
-  background-color:#FFC2E8;
-  border-radius:1em;
-  color: #F74784;
-  text-transform:uppercase;
-  padding:0.7em 1.5em;
-  font-size: 140%;
-  font-family: 'Lato', sans-serif;
-}
-.item-22 a:hover{
-  background-color:#1CD5EA;
-  color: white;
-}
-
-.item-33 a{
-  position: absolute;
-  bottom:23%;
-  right:67.5%;
-  background-color:#FFC2E8;
-  border-radius:1em;
-  color: #F74784;
-  text-transform:uppercase;
-  padding:0.6em 1.5em;
-  font-size: 148%;
-  font-family: 'Lato', sans-serif;
-}
-.item-33 a:hover{
-  background-color:#1CD5EA;
-  color: white;
-}
-
-}
-
-
-
-@media screen and (max-width: 768px) and (max-height: 662px){
-  
+@media screen and (max-height: 671px) {
   .item-11 a{
-    position: absolute;
-    /*bottom:40%;*/
-    bottom:370px;
-    right:39%;
-    background-color:#FFC2E8;
-    border-radius:1.2em;
-    color: #F74784;
-    text-transform:uppercase;
-    padding:1em 1.5em;
-    font-size: 160%;
-    font-family: 'Lato', sans-serif;
+    bottom:33%;
+   /* bottom:210px;*/
   }
-  .item-11 a:hover{
-    background-color:#1CD5EA;
-    color: white;
-  }
-  
   .item-22 a{
-    position: absolute;
-    bottom:60%;
-    right:74%;
-    background-color:#FFC2E8;
-    border-radius:1em;
-    color: #F74784;
-    text-transform:uppercase;
-    padding:0.7em 1.5em;
-    font-size: 140%;
-    font-family: 'Lato', sans-serif;
-  }
-  .item-22 a:hover{
-    background-color:#1CD5EA;
-    color: white;
+    bottom:56%;
   }
   
   .item-33 a{
-    position: absolute;
-    bottom:23%;
-    right:67.5%;
-    background-color:#FFC2E8;
-    border-radius:1em;
-    color: #F74784;
-    text-transform:uppercase;
-    padding:0.6em 1.5em;
-    font-size: 148%;
-    font-family: 'Lato', sans-serif;
+    bottom:13%;
   }
-  .item-33 a:hover{
-    background-color:#1CD5EA;
-    color: white;
+}
+
+@media screen and (max-height: 600px) {
+  .item-11 a{
+    bottom:30%;
   }
   
+  .item-22 a{
+    bottom:54%;
   }
+}
+
+@media screen and (max-height: 623px) {
+  .item-33 a{
+    bottom:7%;
+  }
+}
+@media screen and (max-height: 574px) {
+  .item-33 a{
+    bottom:5%;
+  }
+}
+
+/*PRUEBAS-----------------------------------------------------------------------------*/
+@media screen and (max-width: 1512px) {
+  
+.item-11 a{
+  bottom:38%;
+  right:38%;
+  border-radius:1.2em;
+  padding:1em 1.5em;
+  font-size: 160%;
+}
+
+.item-22 a{
+  bottom:60%;
+  right:74%;
+  border-radius:1em;
+  padding:0.7em 1.5em;
+  font-size: 140%;
+}
+.item-33 a{
+  bottom:18%;
+  right:67.5%;
+  border-radius:1em;
+  padding:0.6em 1.5em;
+  font-size: 146%;
+}
+}
+@media screen and (max-width: 1376px) {
+  
+  .item-11 a{
+    bottom:44%;
+    right:37%;
+    border-radius:1.2em;
+    padding:1em 1.5em;
+    font-size: 160%;
+  }
+  
+  .item-22 a{
+    bottom:60%;
+    right:73%;
+    border-radius:1em;
+    padding:0.7em 1.5em;
+    font-size: 140%;
+  }
+  .item-33 a{
+    bottom:25%;
+    right:66.85%;
+    border-radius:1em;
+    padding:0.6em 1.5em;
+    font-size: 140%;
+  }
+  }
+
+
+  @media screen and (max-width: 1295px) {
+  
+    .item-11 a{
+      bottom:46%;
+      right:37%;
+      border-radius:1.2em;
+      padding:1em 1.5em;
+      font-size: 160%;
+    }
+    
+    .item-22 a{
+      bottom:64%;
+      right:73.7%;
+      border-radius:1em;
+      padding:0.7em 1.5em;
+      font-size: 120%;
+    }
+    .item-33 a{
+      bottom:29%;
+      right:67%;
+      border-radius:1em;
+      padding:0.6em 1.5em;
+      font-size: 130%;
+    }
+    }
+  
+    @media screen and (max-width: 1220px) {
+  
+      .item-11 a{
+        bottom:49%;
+        right:35%;
+        border-radius:1.2em;
+        padding:1em 1.5em;
+        font-size: 160%;
+      }
+      
+      .item-22 a{
+        bottom:66%;
+        right:73.3%;
+        border-radius:1em;
+        padding:0.7em 1.5em;
+        font-size: 120%;
+      }
+      .item-33 a{
+        bottom:33%;
+        right:67%;
+        border-radius:1em;
+        padding:0.6em 1.5em;
+        font-size: 120%;
+      }
+      }
+    
+      @media screen and (max-width: 1170px) {
+  
+        .item-11 a{
+          bottom:51%;
+          right:35%;
+          border-radius:1.2em;
+          padding:1em 1.5em;
+          font-size: 160%;
+        }
+        
+        .item-22 a{
+          bottom:66%;
+          right:73.3%;
+          border-radius:1em;
+          padding:0.7em 1.5em;
+          font-size: 120%;
+        }
+        .item-33 a{
+          bottom:37%;
+          right:67.4%;
+          border-radius:1em;
+          padding:0.6em 1.5em;
+          font-size: 110%;
+        }
+  }
+
+@media screen and (max-width: 1100px) {
+
+  .item-11 a{
+    bottom:53%;
+    right:35%;
+    border-radius:1.2em;
+    padding:0.9em 1.5em;
+    font-size: 150%;
+  }
+  
+  .item-22 a{
+    bottom:69%;
+    right:73.3%;
+    border-radius:1em;
+    padding:0.7em 1.5em;
+    font-size: 110%;
+  }
+  .item-33 a{
+    bottom:40%;
+    right:67.2%;
+    border-radius:1em;
+    padding:0.6em 1.5em;
+    font-size: 110%;
+  }
+}
+  @media screen and (max-width: 1040px) {
+
+    .item-11 a{
+      bottom:57%;
+      right:35%;
+      border-radius:1.2em;
+      padding:0.9em 1.5em;
+      font-size: 140%;
+    }
+    
+    .item-22 a{
+      bottom:72%;
+      right:73.5%;
+      border-radius:1em;
+      padding:0.7em 1.5em;
+      font-size: 98%;
+    }
+    .item-33 a{
+      bottom:44%;
+      right:67.2%;
+      border-radius:1em;
+      padding:0.6em 1.5em;
+      font-size: 100%;
+    }
+  }
+
+    
+@media screen and (max-width: 984px) {
+  
+  .item-11 a{
+    bottom:59%;
+      right:36%;
+      border-radius:1.2em;
+      padding:0.9em 1.5em;
+      font-size: 120%;
+  }
+  .item-22 a{
+    bottom:72%;
+    right:73.5%;
+    border-radius:1em;
+    padding:0.7em 1.5em;
+    font-size: 98%;
+  }
+  .item-33 a{
+    bottom:46%;
+    right:66.9%;
+    border-radius:1em;
+    padding:0.6em 1.3em;
+    font-size: 100%;
+  }
+  }
+  @media screen and (max-width: 940px) {
+  
+    .item-11 a{
+      bottom:62%;
+        right:36%;
+        border-radius:1.2em;
+        padding:0.9em 1.5em;
+        font-size: 120%;
+    }
+    
+    .item-22 a{
+      bottom:75%;
+      right:73.4%;
+      border-radius:1em;
+      padding:0.7em 1.5em;
+      font-size: 92%;
+    }
+    .item-33 a{
+      bottom:48%;
+    right:66.9%;
+    border-radius:1em;
+    padding:0.6em 1.3em;
+    font-size: 100%;
+  
+    }
+    }
+    @media screen and (max-width: 850px) {
+  
+      .item-11 a{
+        bottom:65%;
+          right:36%;
+          border-radius:1.2em;
+          padding:0.6em 1.5em;
+          font-size: 120%;
+      }
+      
+      .item-22 a{
+        bottom:76.5%;
+        right:72.9%;
+        border-radius:1em;
+        padding:0.7em 1.5em;
+        font-size: 88%;
+      }
+      .item-33 a{
+        bottom:54%;
+      right:66.9%;
+      border-radius:1em;
+      padding:0.6em 1.3em;
+      font-size: 90%;
+    
+      }
+  }
+      
+@media screen and (max-width: 768px) {
+  .item-11 a{
+    bottom:50%;
+      right:31%;
+      border-radius:1.2em;
+      padding:0.6em 1.5em;
+      font-size: 90%;
+  }
+ /*PENDIENTE*/ 
+  .item-22 a{
+    bottom:76.5%;
+    right:72.9%;
+    border-radius:1em;
+    padding:0.7em 1.5em;
+    font-size: 88%;
+  }
+  .item-33 a{
+    bottom:58%;
+  right:66.9%;
+  border-radius:1em;
+  padding:0.6em 1.3em;
+  font-size: 80%;
+
+  }
+}
