logIn and registrer E-commerce

--- a/ecommerce/css/home.css
+++ b/ecommerce/css/home.css
@@ -659,3 +659,19 @@ a strong {
 
   }
 }
+
+.toast-container {
+  position: fixed;
+  bottom: 5%;
+  left: 5%;
+  width: 300px !important;
+  z-index: 999;
+}
+.toast-container .notification {
+  transition: all 300ms ease;
+}
+
+.toast-container .notification.hidden {
+  opacity: 0;
+  visibility: hidden;
+}
