--- a/ecommerce/css/custom.css
+++ b/ecommerce/css/custom.css
@@ -583,3 +583,15 @@ a.navbar-item:hover{
   font-family: 'Quicksand', sans-serif;
 
 }
+
+.Tit2_custom {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 14px;
+}
+
+.numb_tit2custom {
+  font-weight: bold;
+  color: #4AE0B8;
+  padding-right: 6px;
+  font-size: 20px;
+}
