--- a/ecommerce/css/home.css
+++ b/ecommerce/css/home.css
@@ -802,3 +802,29 @@ ul.pagination-list li {
   background-color: #428bca;
   border-color: #428bca;
 }
+
+.product-count {
+  background: none repeat scroll 0 0 #5a88ca;
+  border-radius: 50%;
+  color:#fff;
+  display: inline-block;
+  font-size: 8px;
+  height: 20px;
+  padding-top: 2px;
+  position: absolute;
+  right: -10px;
+  text-align: center;
+  top: 5px;
+  width: 20px;
+}
+
+.shopping-item {
+  /* border: 1px solid  */
+  /* #ddd; */
+  /* float: right; */
+  /* font-size: 18px; */
+  /* margin-top: 40px;
+  padding: 10px; */
+  position: relative;
+  /* box-sizing: border-box; */
+}
